--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: laurenhughes
   ms.author: lahugh
   ms.date: 07/21/2020
-  ms.openlocfilehash: 0e38303b435a478b2c6338cd976d7659a3a70c6d
-  ms.sourcegitcommit: 34aa13ead8299439af8b3fe4d1f0c89bde61a6db
+  ms.openlocfilehash: 213e8336eb40a56c6f8bb4d1ce0e2f20e02d1fd4
+  ms.sourcegitcommit: b00a2d931b0d6f1d4ea5d4127f74fc831fb0bca9
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 08/18/2021
-  ms.locfileid: "122418442"
+  ms.lasthandoff: 11/20/2021
+  ms.locfileid: "132869219"
 landingContent:
 - title: Acerca de Azure Kubernetes Service (AKS)
   linkLists:
@@ -34,10 +34,18 @@ landingContent:
       url: concepts-security.md
     - text: Redes
       url: concepts-network.md
-    - text: Almacenamiento
+    - text: Storage
       url: concepts-storage.md
     - text: Escala
       url: concepts-scale.md
+  - linkListType: learn
+    links:
+    - text: Introducción a Azure Kubernetes Service
+      url: /learn/modules/intro-to-azure-kubernetes-service/
+    - text: Introducción a los contenedores en Azure
+      url: /learn/modules/intro-to-containers/
+    - text: Creación y almacenamiento de imágenes de contenedor con Azure Container Registry
+      url: /learn/modules/build-and-store-container-images/
 - title: Implementación de un clúster de AKS en 5 minutos
   linkLists:
   - linkListType: quickstart
@@ -48,32 +56,20 @@ landingContent:
       url: kubernetes-walkthrough-portal.md
     - text: Plantilla de Resource Manager
       url: kubernetes-walkthrough-rm-template.md
-- title: Implementación y depuración de aplicaciones con Bridge to Kubernetes
+- title: Desarrollo y depuración de aplicaciones
   linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Desarrollo con Helm
+      url: quickstart-helm.md
+    - text: Desarrollo con Dapr
+      url: quickstart-dapr.md
   - linkListType: how-to-guide
     links:
     - text: Uso de Bridge to Kubernetes con Visual Studio Code
       url: https://code.visualstudio.com/docs/containers/bridge-to-kubernetes
     - text: Uso de Bridge to Kubernetes con Visual Studio
       url: /visualstudio/containers/bridge-to-kubernetes
-- title: Implementación, administración y actualización de aplicaciones
-  linkLists:
-  - linkListType: tutorial
-    links:
-    - text: 1. Preparación de una aplicación para AKS
-      url: tutorial-kubernetes-prepare-app.md
-    - text: 2. Implementación y uso de Azure Container Registry
-      url: tutorial-kubernetes-prepare-acr.md
-    - text: 3. Implementación de un clúster de AKS
-      url: tutorial-kubernetes-deploy-cluster.md
-    - text: 4. Ejecución de la aplicación
-      url: tutorial-kubernetes-deploy-application.md
-    - text: 5. Escalado de aplicaciones
-      url: tutorial-kubernetes-scale.md
-    - text: 6. Actualización de una aplicación
-      url: tutorial-kubernetes-app-update.md
-    - text: 7. Actualización de Kubernetes en AKS
-      url: tutorial-kubernetes-upgrade-cluster.md
 - title: Guía de arquitectura
   linkLists:
   - linkListType: architecture
@@ -92,13 +88,31 @@ landingContent:
       url: best-practices.md
     - text: Otras soluciones de AKS
       url: /azure/architecture/reference-architectures/containers/aks-start-here?WT.mc_id=AKSDOCSPAGE
-- title: Desarrollo de aptitudes con Microsoft Learn
+- title: Implementación, administración y actualización de aplicaciones
   linkLists:
-  - linkListType: learn
+  - linkListType: tutorial
     links:
-    - text: Introducción a Azure Kubernetes Service
-      url: /learn/modules/intro-to-azure-kubernetes-service/
-    - text: Introducción a los contenedores en Azure
-      url: /learn/modules/intro-to-containers/
-    - text: Creación y almacenamiento de imágenes de contenedor con Azure Container Registry
-      url: /learn/modules/build-and-store-container-images/
+    - text: 1. Preparación de una aplicación para AKS
+      url: tutorial-kubernetes-prepare-app.md
+    - text: 2. Implementación y uso de Azure Container Registry
+      url: tutorial-kubernetes-prepare-acr.md
+    - text: 3. Implementación de un clúster de AKS
+      url: tutorial-kubernetes-deploy-cluster.md
+    - text: 4. Ejecución de la aplicación
+      url: tutorial-kubernetes-deploy-application.md
+    - text: 5. Escalado de aplicaciones
+      url: tutorial-kubernetes-scale.md
+    - text: 6. Actualización de una aplicación
+      url: tutorial-kubernetes-app-update.md
+    - text: 7. Actualización de Kubernetes en AKS
+      url: tutorial-kubernetes-upgrade-cluster.md
+- title: Ampliación de las funcionalidades del clúster
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Complemento Open Service Mesh
+      url: open-service-mesh-about.md
+    - text: Extensión de clúster de Dapr
+      url: dapr.md
+    - text: Extensiones de clúster
+      url: cluster-extensions.md
