--- a/articles/azure-vmware/index.yml
+++ b/articles/azure-vmware/index.yml
@@ -8,13 +8,13 @@ metadata:
   ms.topic: landing-page
   author: suzizuber
   ms.author: v-szuber
-  ms.date: 10/06/2021
-  ms.openlocfilehash: efc7a0083929d6750544c649e18a74cb929d6605
-  ms.sourcegitcommit: 05c8e50a5df87707b6c687c6d4a2133dc1af6583
+  ms.date: 11/12/2021
+  ms.openlocfilehash: bf6c18fd32288ed99c16dd89314aca7c743a37b3
+  ms.sourcegitcommit: 81a1d2f927cf78e82557a85c7efdf17bf07aa642
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 11/16/2021
-  ms.locfileid: "132555477"
+  ms.lasthandoff: 11/19/2021
+  ms.locfileid: "132812076"
 landingContent:
 - title: Acerca de Azure VMware Solution
   linkLists:
@@ -74,16 +74,26 @@ landingContent:
       url: tutorial-scale-private-cloud.md
     - text: 8 - Eliminación de una nube privada
       url: tutorial-delete-private-cloud.md
-- title: Recuperación ante desastres
+- title: Escala empresarial para Azure VMware Solution
   linkLists:
-  - linkListType: how-to-guide
+  - linkListType: architecture
     links:
-    - text: Implementación de la recuperación ante desastres de JetStream
-      url: deploy-disaster-recovery-using-jetstream.md
-    - text: Implementación de VMware HCX para la recuperación ante desastres
-      url: deploy-disaster-recovery-using-vmware-hcx.md
-    - text: Implementación de VMware SRM para la recuperación ante desastres
-      url: disaster-recovery-using-vmware-site-recovery-manager.md
+    - text: Escala empresarial para Azure VMware Solution
+      url: /azure/cloud-adoption-framework/scenarios/azure-vmware/enterprise-scale-landing-zone
+    - text: Administración de identidades y acceso
+      url: /azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-identity-and-access-management
+    - text: Topología de red y conectividad
+      url: /azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-network-topology-connectivity
+    - text: Administración y supervisión
+      url: /azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-management-and-monitoring
+    - text: Continuidad empresarial y recuperación ante desastres
+      url: /azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-business-continuity-and-disaster-recovery
+    - text: Seguridad, gobernanza y cumplimiento a escala empresarial
+      url: /azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-security-governance-and-compliance
+    - text: Automatización de la plataforma y DevOps
+      url: /azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-platform-automation-and-devops
+    - text: Escala empresarial para la automatización de Azure VMware Solution
+      url: https://github.com/Azure/Enterprise-Scale-for-AVS
 - title: Administración de identidades
   linkLists:
   - linkListType: how-to-guide
@@ -152,6 +162,14 @@ landingContent:
       url: set-up-backup-server-for-azure-vmware-solution.md
     - text: Copia de seguridad de las máquinas virtuales de una nube privada con Backup Server
       url: backup-azure-vmware-solution-virtual-machines.md
+  - linkListType: deploy
+    links:
+    - text: Implementación de la recuperación ante desastres de JetStream
+      url: deploy-disaster-recovery-using-jetstream.md
+    - text: Implementación de VMware HCX para la recuperación ante desastres
+      url: deploy-disaster-recovery-using-vmware-hcx.md
+    - text: Implementación de VMware SRM para la recuperación ante desastres
+      url: disaster-recovery-using-vmware-site-recovery-manager.md
 - title: Soluciones de VMware
   linkLists:
   - linkListType: how-to-guide
@@ -194,6 +212,8 @@ landingContent:
       url: /azure/templates/microsoft.avs/privateclouds
     - text: Proveedor de Azure para Terraform
       url: https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/vmware_private_cloud
+    - text: Escala empresarial para la automatización de Azure VMware Solution
+      url: https://github.com/Azure/Enterprise-Scale-for-AVS
   - linkListType: video
     links:
     - text: Lista de reproducción
