--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -404,7 +404,9 @@
               href: azure-stack-edge-contact-microsoft-support.md
     - name: Notas de la versión compartidas
       items:
-        - name: '2110: actual'
+        - name: "2111\_(actual)"
+          href: azure-stack-edge-gpu-2111-release-notes.md
+        - name: 2110
           href: azure-stack-edge-gpu-2110-release-notes.md
         - name: 2106
           href: azure-stack-edge-gpu-2106-release-notes.md
