--- a/articles/active-directory/enterprise-users/TOC.yml
+++ b/articles/active-directory/enterprise-users/TOC.yml
@@ -38,6 +38,8 @@
           href: users-bulk-add.md
         - name: Administración de perfiles de usuario
           href: ../fundamentals/active-directory-users-profile-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+        - name: Asignación de atributos de seguridad personalizados
+          href: users-custom-security-attributes.md
         - name: Descarga de información de usuario
           href: users-bulk-download.md
         - name: Uso compartido de cuentas de usuario
