--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -13,7 +13,7 @@ items:
       - name: Creación de una aplicación de Android
         href: quick-android-map.md
       - name: Creación de una aplicación iOS
-        href: quick-iOS-app.md
+        href: quick-ios-app.md
   - name: Tutoriales
     items:
       - name: Tutoriales de SDK web
@@ -281,6 +281,8 @@ items:
         items:
           - name: Introducción al control de mapa iOS
             href: how-to-use-ios-map-control-library.md
+          - name: Uso del módulo de mapas de interiores de Azure Maps
+            href: how-to-use-indoor-module-ios.md
       - name: "Uso de Azure Maps en Power\_BI"
         items:
           - name: Introducción
@@ -336,7 +338,7 @@ items:
           - name: Render Service
             href: /rest/api/maps/render
           - name: Render Service v2
-            href: /rest/api/maps/renderv2
+            href: /rest/api/maps/render-v2
           - name: Route Service
             href: /rest/api/maps/route
           - name: Servicio de búsqueda
@@ -364,11 +366,11 @@ items:
               - name: Servicio WFS
                 href: /rest/api/maps/v2/wfs
           - name: Administración de cuentas de Maps
-            href: /rest/api/maps-management
+            href: /rest/api/maps-management/
       - name: JavaScript
         items:
           - name: Control de mapa
-            href: /javascript/api/azure-maps-javascript/
+            href: /javascript/api/azure-maps-control/
           - name: Diseño de herramientas
             href: /javascript/api/azure-maps-drawing-tools/
           - name: Módulo de servicio
@@ -394,7 +396,7 @@ items:
           - name: IoT Hub Device Provisioning Service
             href: ../iot-dps/index.yml
           - name: IoT Central
-            href: /microsoft-iot-central/
+            href: /azure/iot-central/
           - name: IoT Edge
             href: ../iot-edge/index.yml
           - name: IoT Plug and Play
@@ -412,7 +414,7 @@ items:
       - name: Condiciones de uso de Azure Maps
         href: 'https://azure.microsoft.com/support/legal/'
       - name: Precios de Azure Maps
-        href: 'https://azure.microsoft.com/pricing/details/azure-maps'
+        href: 'https://azure.microsoft.com/pricing/details/azure-maps/'
       - name: Calculadora de precios
         href: 'https://azure.microsoft.com/pricing/calculator/'
       - name: Vídeos de Azure Maps
@@ -424,9 +426,9 @@ items:
       - name: Glosario de Azure Maps
         href: glossary.md
       - name: Actualizaciones del servicio
-        href: 'https://azure.microsoft.com/updates'
+        href: 'https://azure.microsoft.com/updates/'
       - name: Centro para desarrolladores de Azure
-        href: 'https://azure.microsoft.com/develop/iot/'
+        href: 'https://azure.microsoft.com/overview/iot/'
       - name: Azure Roadmap
         href: 'https://azure.microsoft.com/roadmap/?category=iot'
       - name: Casos prácticos técnicos
