--- a/articles/azure-resource-manager/bicep/index.yml
+++ b/articles/azure-resource-manager/bicep/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: na
   author: mumian
   ms.author: jgao
-  ms.date: 08/18/2021
-  ms.openlocfilehash: 6f4b12d1c4b4293ee32a30475d99810ac16af8a7
-  ms.sourcegitcommit: 8000045c09d3b091314b4a73db20e99ddc825d91
+  ms.date: 11/17/2021
+  ms.openlocfilehash: 7c825fcb85cc311b77e8ea851815a58974a5edf4
+  ms.sourcegitcommit: 1244a72dbec39ac8cf16bb1799d8c46bde749d47
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 08/19/2021
-  ms.locfileid: "122445036"
+  ms.lasthandoff: 11/18/2021
+  ms.locfileid: "132754830"
 landingContent:
 - title: Bicep
   linkLists:
@@ -47,28 +47,36 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Uso de las funciones
-      url: ./bicep-functions.md
-    - text: Uso de operadores
-      url: ./operators.md
-    - text: Uso de tipos de datos
-      url: ./data-types.md
+    - text: Estructura y sintaxis de archivos de Bicep
+      url: ./file.md
     - text: Definición de parámetros
       url: ./parameters.md
     - text: Definición de variables
       url: ./variables.md
     - text: Definición de recursos
       url: ./resource-declaration.md
+    - text: Definición de los módulos
+      url: ./modules.md
     - text: Definir las salidas
       url: outputs.md
   - linkListType: reference
     links:
-    - text: Estructura de archivos de Bicep
-      url: ./file.md
+    - text: Functions
+      url: ./bicep-functions.md
+    - text: Operadores
+      url: ./operators.md
+    - text: Tipos de datos
+      url: ./data-types.md
     - text: Plantillas de inicio rápido de Azure
       url: https://azure.microsoft.com/resources/templates/
 - title: Implementación de archivos de Bicep
   linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Bicep con canalizaciones
+      url: add-template-to-azure-pipelines.md
+    - text: Bicep con Acciones de GitHub
+      url: deploy-github-actions.md
   - linkListType: how-to-guide
     links:
     - text: PowerShell
@@ -85,7 +93,7 @@ landingContent:
     links:
     - text: Resource group
       url: deploy-to-resource-group.md
-    - text: Suscripción
+    - text: Subscription
       url: deploy-to-subscription.md
     - text: Grupo de administración
       url: deploy-to-management-group.md
@@ -93,6 +101,16 @@ landingContent:
       url: deploy-to-tenant.md
     - text: Ámbito del recurso de extensión
       url: scope-extension-resources.md
+- title: Guía y patrones
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Procedimientos recomendados
+      url: best-practices.md
+    - text: Patrón de conjunto de configuración
+      url: patterns-configuration-set.md
+    - text: Patrón de archivo de variables compartido
+      url: patterns-shared-variable-file.md
 - title: Exploración de contenido de referencia
   linkLists:
   - linkListType: reference
@@ -101,5 +119,5 @@ landingContent:
       url: /azure/templates/
     - text: Azure PowerShell
       url: /powershell/module/az.resources
-    - text: Azure CLI
+    - text: CLI de Azure
       url: /cli/azure/resource
