--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -52,6 +52,9 @@
     - name: Creación de una consulta en Azure Portal y uso compartido de la misma
       displayName: 'query, portal'
       href: ./tutorials/create-share-query.md
+    - name: Automatización de consultas con Azure Logic Apps
+      displayName: 'query, resource graph, logic app'
+      href: ./tutorials/logic-app-calling-arg.md
 - name: Ejemplos
   items:
     - name: Ejemplos de lenguajes
